feat(migration): configuración híbrida para preservar sitio actual
- Agregado nginx-hybrid.conf para deployment sin interrupciones
- Nueva web Next.js funcionará en /nueva-web/ manteniendo sitio actual
- MIGRATION-STRATEGY.md con plan detallado de migración gradual
- docker-compose.yml actualizado para acceso al sitio actual
- deploy.sh configurado para usar setup híbrido por defecto

Permite migración gradual:
- fertilcenter.com.mx/ → sitio actual (preservado)
- fertilcenter.com.mx/nueva-web/ → nueva aplicación Next.js
- Migración cuando esté listo cambiando redirect

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     volumes:
       # Persistir logs y uploads si es necesario
       - ./logs:/app/logs
+      # Configuración específica para el deployment híbrido
+      - /var/www/fertilcenter.com.mx:/var/www/fertilcenter.com.mx:ro
     networks:
       - fertilcenter-network
 
@@ -30,9 +32,11 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx-hybrid.conf:/etc/nginx/nginx.conf:ro
       - ./ssl:/etc/nginx/ssl:ro
       - /var/log/nginx:/var/log/nginx
+      # Acceso al sitio actual para servir archivos estáticos
+      - /var/www/fertilcenter.com.mx:/var/www/fertilcenter.com.mx:ro
     depends_on:
       - fertilcenter-web
     networks:
