Correccion de rutas para nginx

--- a/nginx-hybrid.conf
+++ b/nginx-hybrid.conf
@@ -49,12 +49,12 @@ http {
         # =================================================================
 
         # OPCIÓN ACTUAL: Servir Next.js en una ruta específica
-        # Tu sitio actual queda intacto, Next.js funciona en /nueva-web/
-        location /nueva-web/ {
+        # Tu sitio actual queda intacto, Next.js funciona en /webpage/
+        location /webpage/ {
             limit_req zone=general burst=50 nodelay;
             
-            # Remover /nueva-web del path para Next.js
-            rewrite ^/nueva-web/(.*)$ /$1 break;
+            # Remover /webpage del path para Next.js
+            rewrite ^/webpage/(.*)$ /$1 break;
             
             proxy_pass http://fertilcenter_app;
             proxy_http_version 1.1;
@@ -68,11 +68,11 @@ http {
         }
 
         # API endpoints para la nueva web Next.js
-        location /nueva-web/api/ {
+        location /webpage/api/ {
             limit_req zone=api burst=20 nodelay;
             
-            # Remover /nueva-web del path para la API
-            rewrite ^/nueva-web/(.*)$ /$1 break;
+            # Remover /webpage del path para la API
+            rewrite ^/webpage/(.*)$ /$1 break;
             
             proxy_pass http://fertilcenter_app;
             proxy_http_version 1.1;
@@ -86,15 +86,15 @@ http {
         }
 
         # Static assets de Next.js con cache largo
-        location /nueva-web/_next/static/ {
-            rewrite ^/nueva-web/(.*)$ /$1 break;
+        location /webpage/_next/static/ {
+            rewrite ^/webpage/(.*)$ /$1 break;
             proxy_pass http://fertilcenter_app;
             add_header Cache-Control "public, max-age=31536000, immutable";
         }
 
         # Imágenes de Next.js con cache
-        location ~* ^/nueva-web/.*\.(jpg|jpeg|png|gif|ico|svg|webp)$ {
-            rewrite ^/nueva-web/(.*)$ /$1 break;
+        location ~* ^/webpage/.*\.(jpg|jpeg|png|gif|ico|svg|webp)$ {
+            rewrite ^/webpage/(.*)$ /$1 break;
             proxy_pass http://fertilcenter_app;
             add_header Cache-Control "public, max-age=86400";
         }
@@ -106,48 +106,5 @@ http {
             index index.html;
             try_files $uri $uri/ =404;
         }
-
-        # =================================================================
-        # ALTERNATIVA: Comentada para cuando quieras migrar completamente
-        # =================================================================
-        #
-        # Para migrar completamente a Next.js, comenta la sección "TU SITIO ACTUAL"
-        # y descomenta esto:
-        #
-        # location /api/ {
-        #     limit_req zone=api burst=20 nodelay;
-        #     proxy_pass http://fertilcenter_app;
-        #     proxy_http_version 1.1;
-        #     proxy_set_header Upgrade $http_upgrade;
-        #     proxy_set_header Connection 'upgrade';
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        #     proxy_cache_bypass $http_upgrade;
-        # }
-        #
-        # location /_next/static/ {
-        #     proxy_pass http://fertilcenter_app;
-        #     add_header Cache-Control "public, max-age=31536000, immutable";
-        # }
-        #
-        # location ~* \.(jpg|jpeg|png|gif|ico|svg|webp)$ {
-        #     proxy_pass http://fertilcenter_app;
-        #     add_header Cache-Control "public, max-age=86400";
-        # }
-        #
-        # location / {
-        #     limit_req zone=general burst=50 nodelay;
-        #     proxy_pass http://fertilcenter_app;
-        #     proxy_http_version 1.1;
-        #     proxy_set_header Upgrade $http_upgrade;
-        #     proxy_set_header Connection 'upgrade';
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        #     proxy_cache_bypass $http_upgrade;
-        # }
     }
 }
